gccida/c1/do_compare_rtx_and_jump
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/expr.c:10429:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/expr.c:10431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/expr.c:10436:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/expr.c:10444:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison; // [rsp+Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/expr.c:10457:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_compare_rtx_and_jump/src/obj/expr.o] Error 1
